Added Register, Login and Logout functionality.

--- a/webshop_01/templates/base/base.html
+++ b/webshop_01/templates/base/base.html
@@ -25,6 +25,9 @@
     <!-- Slick -->
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/slick.min.css">
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/slick-theme.css">
+    {% block style_css %}
+
+    {% endblock %}
 
 <!--
 
