--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -88,15 +88,15 @@
                 </div>
                 <div class="row">
                     {% for product in products %}
-                        <div class="col-md-4">
+                        <div  class="col-md-4">
                             <div class="card mb-4 product-wap rounded-0">
                                 <div class="card rounded-0">
-                                    <img class="card-img rounded-0 img-fluid" src="{{ product.images.image.url }}">
+                                    <img  class="card-img rounded-0 img-fluid" src="{{ product.cover_image.url }}">
                                     <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                         <ul class="list-unstyled">
                                             <li><a class="btn btn-success text-white" href="shop-single.html"><i
                                                     class="far fa-heart"></i></a></li>
-                                            <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i
+                                            <li><a class="btn btn-success text-white mt-2" href="{% url "shop_details" product.pk %}"><i
                                                     class="far fa-eye"></i></a></li>
                                             <li><a class="btn btn-success text-white mt-2" href="shop-single.html"><i
                                                     class="fas fa-cart-plus"></i></a></li>
@@ -104,7 +104,7 @@
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <a href="shop-single.html" class="h3 text-decoration-none">{{ product.title }}</a>
+                                    <a href="{% url 'shop_details' product.pk %}" class="h3 text-decoration-none">{{ product.title }}</a>
                                     <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                                         <li>M/L/X/XL</li>
                                         <li class="pt-2">
@@ -117,11 +117,6 @@
                                     </ul>
                                     <ul class="list-unstyled d-flex justify-content-center mb-1">
                                         <li class="rating" data-rating="{{ product.rating }}">
-
-                                            {#                                            <i class="text-warning fa fa-star"></i>#}
-                                            {#                                            <i class="text-warning fa fa-star"></i>#}
-                                            {#                                            <i class="text-muted fa fa-star"></i>#}
-                                            {#                                            <i class="text-muted fa fa-star"></i>#}
                                         </li>
                                     </ul>
                                     <p class="text-center mb-0">${{ product.price|floatformat:2 }}</p>
@@ -277,11 +272,12 @@
             </div>
         </div>
     </section>
-
+    <---->
     <script>
         function addStars() {
             let ratingList = Array.from(document.getElementsByClassName('rating'));
-            ratingList.forEach(addElements)
+            ratingList.forEach(addElements);
+
             function addElements(item) {
                 let starsYellow = Number(item.getAttribute("data-rating"));
                 let whiteStars = 5 - starsYellow;
@@ -295,7 +291,7 @@
                 item.innerHTML = htmlStr
             }
         }
-        addStars()
+        addStars();
     </script>
     <!--End Brands-->
 {% endblock %}>
