--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -98,7 +98,7 @@
                                                     class="far fa-heart"></i></a></li>
                                             <li><a class="btn btn-success text-white mt-2" href="{% url "shop_details" product.pk %}"><i
                                                     class="far fa-eye"></i></a></li>
-                                            <li id="cart" data-product-id="{{ product.id }}"><a class="btn btn-success text-white mt-2"><i
+                                            <li id="cart" data-product-slug="{{ product.slug }}"><a class="btn btn-success text-white mt-2"><i
                                                     class="fas fa-cart-plus"></i></a></li>
                                         </ul>
                                     </div>
