Added Some Changes For Cart

--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -270,6 +270,7 @@
                     </div>
                 </div>
             </div>
+             <h1>{{ cart_products }}</h1>
         </div>
     </section>
     <script src="{% get_static_prefix %}js/shop_rate.js"></script>
