Added Cart Page

--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -80,7 +80,7 @@
                    data-bs-target="#templatemo_search">
                     <i class="fa fa-fw fa-search text-dark mr-2"></i>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
+                <a class="nav-icon position-relative text-decoration-none" href="{% url 'cart' %}">
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                     <span id="cart_number" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">{{ cart_products.count }}</span>
                 </a>
