--- a/webshop_01/templates/pages/contact.html
+++ b/webshop_01/templates/pages/contact.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+    <link rel="stylesheet" href="{% get_static_prefix %}css/cart.css">
 
 {% block body_content %}
     <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
