--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -274,7 +274,7 @@
         </div>
     </section>
     <script src="{% get_static_prefix %}js/shop_rate.js"></script>
-    <script src="{% get_static_prefix %}js/add_to_cart.js"></script>
+    <script src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
     <!--End Brands-->
 {% endblock %}>
 
