--- a/webshop_01/templates/pages/cart.html
+++ b/webshop_01/templates/pages/cart.html
@@ -19,7 +19,7 @@
                     {% for product in cart_products %}
                         <div class="row border-top border-bottom">
                             <div class="row main align-items-center">
-                                <div class="col-2"><img class="img-fluid" src="https://i.imgur.com/1GrakTl.jpg"></div>
+                                <div class="col-2"><img class="img-fluid" src="{{ product.cover_image.url }}"></div>
                                 <div class="col">
                                     <div class="row text-muted">{{ product.brand }}</div>
                                     <div class="row">{{ product.title }}</div>
@@ -27,7 +27,7 @@
                                 <div class="col">
                                     <a href="#" class="text-decoration-none">-</a><a href="#" class="border text-decoration-none">1</a><a class="text-decoration-none" href="#">+</a>
                                 </div>
-                                <div class="col">BGN {{ product.price|floatformat:2 }} <a href="#" class="close_cart text-decoration-none">&#10005;</a></div>
+                                <div class="col">BGN {{ product.price|floatformat:2 }} <a data-product-slug="{{ product.slug }}" href="#" class="delete_cart_element close_cart text-decoration-none">&#10005;</a></div>
                             </div>
                         </div>
                     {% endfor %}
@@ -60,4 +60,5 @@
         </div>
 
     </div>
+    <script src="{% get_static_prefix %}js/cart/del_cart_product.js"></script>
 {% endblock %}
