--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -1,5 +1,6 @@
 {% extends 'base/base.html' %}
 {% load static %}
+{% load mptt_tags %}
 {% block body_content %}
     <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
          aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -27,37 +28,26 @@
             <div class="col-lg-3">
                 <h1 class="h2 pb-4">Categories</h1>
                 <ul class="list-unstyled templatemo-accordion">
-                    <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-                            Gender
-                            <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
-                        </a>
-                        <ul class="collapse show list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Men</a></li>
-                            <li><a class="text-decoration-none" href="#">Women</a></li>
-                        </ul>
-                    </li>
-                    <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-                            Sale
-                            <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
-                        </a>
-                        <ul id="collapseTwo" class="collapse list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Sport</a></li>
-                            <li><a class="text-decoration-none" href="#">Luxury</a></li>
-                        </ul>
-                    </li>
-                    <li class="pb-3">
-                        <a class="collapsed d-flex justify-content-between h3 text-decoration-none" href="#">
-                            Product
-                            <i class="pull-right fa fa-fw fa-chevron-circle-down mt-1"></i>
-                        </a>
-                        <ul id="collapseThree" class="collapse list-unstyled pl-3">
-                            <li><a class="text-decoration-none" href="#">Bag</a></li>
-                            <li><a class="text-decoration-none" href="#">Sweather</a></li>
-                            <li><a class="text-decoration-none" href="#">Sunglass</a></li>
-                        </ul>
-                    </li>
+                    <a class="collapsed d-flex justify-content-between h3 text-decoration-none pt-1 pb-3"
+                       href="{% url 'shop' %}">
+                        Show All
+                    </a>
+                    {% for category in categories %}
+                        <li class="pb-3">
+                            <a class="collapsed d-flex justify-content-between h3 text-decoration-none"
+                               href="{% url 'shop' category.title %}">
+                                {{ category.title }}
+                                <i class="fa fa-fw fa-chevron-circle-down mt-1"></i>
+                            </a>
+                            <ul class="collapse show list-unstyled p-3">
+                                <li><a class="text-decoration-none" href="{% url 'shop' category.slug %}">All</a></li>
+                                {% for child in category.get_children %}
+                                    <li><a class="text-decoration-none"
+                                           href="{% url 'shop' child.slug %}">{{ child.title }}</a></li>
+                                {% endfor %}
+                            </ul>
+                        </li>
+                    {% endfor %}
                 </ul>
             </div>
 
@@ -88,23 +78,27 @@
                 </div>
                 <div class="row">
                     {% for product in products %}
-                        <div  class="col-md-4">
+                        <div class="col-md-4">
                             <div class="card mb-4 product-wap rounded-0">
                                 <div class="card rounded-0">
-                                    <img  class="card-img rounded-0 img-fluid" src="{{ product.cover_image.url }}">
+                                    <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px"
+                                         src="{{ product.cover_image.url }}">
                                     <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                         <ul class="list-unstyled">
                                             <li><a class="btn btn-success text-white" href="shop-single.html"><i
                                                     class="far fa-heart"></i></a></li>
-                                            <li><a class="btn btn-success text-white mt-2" href="{% url "shop_details" product.pk %}"><i
+                                            <li><a class="btn btn-success text-white mt-2"
+                                                   href="{% url "shop_details" product.pk %}"><i
                                                     class="far fa-eye"></i></a></li>
-                                            <li id="cart" data-product-slug="{{ product.slug }}"><a class="btn btn-success text-white mt-2"><i
+                                            <li id="cart" data-product-slug="{{ product.slug }}"><a
+                                                    class="btn btn-success text-white mt-2"><i
                                                     class="fas fa-cart-plus"></i></a></li>
                                         </ul>
                                     </div>
                                 </div>
                                 <div class="card-body">
-                                    <a href="{% url 'shop_details' product.pk %}" class="h3 text-decoration-none">{{ product.title }}</a>
+                                    <a href="{% url 'shop_details' product.pk %}"
+                                       class="h3 text-decoration-none">{{ product.title }}</a>
                                     <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                                         <li>M/L/X/XL</li>
                                         <li class="pt-2">
@@ -270,7 +264,6 @@
                     </div>
                 </div>
             </div>
-             <h1>{{ cart_products }}</h1>
         </div>
     </section>
     <script src="{% get_static_prefix %}js/shop_rate.js"></script>
