--- a/webshop_01/templates/pages/shop.html
+++ b/webshop_01/templates/pages/shop.html
@@ -56,13 +56,13 @@
                     <div class="col-md-6">
                         <ul class="list-inline shop-top-menu pb-3 pt-1">
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#">All</a>
+                                <a class="h3 text-dark text-decoration-none mr-3" href="{% url 'shop' category %}">All</a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none mr-3" href="#">Men's</a>
+                                <a class="h3 text-dark text-decoration-none mr-3" href="{% url 'shop' category 'Men' %}">Men's</a>
                             </li>
                             <li class="list-inline-item">
-                                <a class="h3 text-dark text-decoration-none" href="#">Women's</a>
+                                <a class="h3 text-dark text-decoration-none" href="{% url 'shop' category 'Women' %}">Women's</a>
                             </li>
                         </ul>
                     </div>
@@ -88,7 +88,7 @@
                                             <li><a class="btn btn-success text-white" href="shop-single.html"><i
                                                     class="far fa-heart"></i></a></li>
                                             <li><a class="btn btn-success text-white mt-2"
-                                                   href="{% url "shop_details" product.pk %}"><i
+                                                   href="{% url "shop_details" product.slug %}"><i
                                                     class="far fa-eye"></i></a></li>
                                             <li id="cart" data-product-slug="{{ product.slug }}"><a
                                                     class="btn btn-success text-white mt-2"><i
@@ -96,8 +96,10 @@
                                         </ul>
                                     </div>
                                 </div>
+
+
                                 <div class="card-body">
-                                    <a href="{% url 'shop_details' product.pk %}"
+                                    <a href="{% url 'shop_details' product.slug %}"
                                        class="h3 text-decoration-none">{{ product.title }}</a>
                                     <ul class="w-100 list-unstyled d-flex justify-content-between mb-0">
                                         <li>M/L/X/XL</li>
