--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -85,13 +85,16 @@
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
                     <span id="cart_number" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">{{ cart_products.count }}</span>
                 </a>
-                <a class="nav-icon position-relative text-decoration-none" href="#">
-                    <i class="fa fa-fw fa-user text-dark mr-3"></i>
-                    <span class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
-                </a>
+                {% if request.user.is_authenticated %}
+                    <a class="nav-icon position-relative text-decoration-none" href="{% url 'favourites' %}">
+                        <i class="fa fa-fw fa-heart text-dark mr-3"></i>
+                        <span id="favourites-count" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                    </a>
+                {% endif %}
             </div>
         </div>
 
     </div>
 </nav>
 <script src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
+<script src="{% get_static_prefix %}js/favourites_count.js"></script>
