--- a/webshop_01/templates/pages/shop-single.html
+++ b/webshop_01/templates/pages/shop-single.html
@@ -32,15 +32,16 @@
                     </div>
                     <div class="row">
                         <!--Start Controls-->
-                        <div class="col-1 align-self-center">
-                            <a href="#multi-item-example" role="button" data-bs-slide="prev">
-                                <i class="text-dark fas fa-chevron-left"></i>
-                                <span class="sr-only">Previous</span>
-                            </a>
-                        </div>
+
                         <!--End Controls-->
                         <!--Start Carousel Wrapper-->
                         {% if photos %}
+                            <div class="col-1 align-self-center">
+                                <a href="#multi-item-example" role="button" data-bs-slide="prev">
+                                    <i class="text-dark fas fa-chevron-left"></i>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                            </div>
                             <div id="multi-item-example" class="col-10 carousel slide carousel-multi-item"
                                  data-bs-ride="carousel">
                                 <!--Start Slides-->
@@ -51,25 +52,22 @@
                                         <div class="row">
                                             <div class="col-4">
                                                 <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_01.jpg"
-                                                         alt="Product Image 1">
-                                                </a>
-                                            </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_02.jpg"
-                                                         alt="Product Image 2">
-                                                </a>
-                                            </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_03.jpg"
+                                                    <img style="width: 150px; height: 100px" class="card-img img-fluid"
+                                                         src="{{ product.cover_image.url }}"
                                                          alt="Product Image 3">
                                                 </a>
                                             </div>
+                                            {% for photo in photos %}
+
+                                                <div class="col-4">
+                                                    <a href="#">
+                                                        <img style="width: 150px; height: 100px"
+                                                             class="card-img img-fluid"
+                                                             src="{{ photo.image.url }}"
+                                                             alt="Product Image 3">
+                                                    </a>
+                                                </div>
+                                            {% endfor %}
                                         </div>
                                     </div>
                                     <!--/.First slide-->
@@ -79,68 +77,41 @@
                                         <div class="row">
                                             <div class="col-4">
                                                 <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_04.jpg"
-                                                         alt="Product Image 4">
+                                                    <img style="width: 150px; height: 100px" class="card-img img-fluid"
+                                                         src="{{ product.cover_image.url }}"
+                                                         alt="Product Image 3">
                                                 </a>
                                             </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_05.jpg"
-                                                         alt="Product Image 5">
-                                                </a>
-                                            </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_06.jpg"
-                                                         alt="Product Image 6">
-                                                </a>
-                                            </div>
+                                            {% for photo in photos %}
+                                                <div class="col-4">
+                                                    <a href="#">
+                                                        <img style="width: 150px; height: 100px"
+                                                             class="card-img img-fluid"
+                                                             src="{{ photo.image.url }}"
+                                                             alt="Product Image 3">
+                                                    </a>
+                                                </div>
+                                            {% endfor %}
                                         </div>
                                     </div>
                                     <!--/.Second slide-->
 
                                     <!--Third slide-->
-                                    <div class="carousel-item">
-                                        <div class="row">
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_07.jpg"
-                                                         alt="Product Image 7">
-                                                </a>
-                                            </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_08.jpg"
-                                                         alt="Product Image 8">
-                                                </a>
-                                            </div>
-                                            <div class="col-4">
-                                                <a href="#">
-                                                    <img class="card-img img-fluid"
-                                                         src="{% get_static_prefix %}img/product_single_09.jpg"
-                                                         alt="Product Image 9">
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
+
                                     <!--/.Third slide-->
                                 </div>
                                 <!--End Slides-->
                             </div>
+                            <div class="col-1 align-self-center">
+                                <a href="#multi-item-example" role="button" data-bs-slide="next">
+                                    <i class="text-dark fas fa-chevron-right"></i>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
                         {% endif %}
                         <!--End Carousel Wrapper-->
                         <!--Start Controls-->
-                        <div class="col-1 align-self-center">
-                            <a href="#multi-item-example" role="button" data-bs-slide="next">
-                                <i class="text-dark fas fa-chevron-right"></i>
-                                <span class="sr-only">Next</span>
-                            </a>
-                        </div>
+
                         <!--End Controls-->
                     </div>
                 </div>
@@ -216,7 +187,8 @@
                                         </button>
                                     </div>
                                     <div class="col d-grid">
-                                        <button id="cart" data-product-slug="{{ product.slug }}" class="btn btn-success btn-lg">Add To Cart
+                                        <button id="cart" data-product-slug="{{ product.slug }}"
+                                                class="btn btn-success btn-lg">Add To Cart
                                         </button>
                                     </div>
                                 </div>
@@ -244,14 +216,16 @@
                     <div class="p-2 pb-3">
                         <div class="product-wap card rounded-0">
                             <div class="card rounded-0">
-                                <img class="card-img rounded-0 img-fluid" src="{{ related.cover_image.url }}">
+                                <img class="card-img rounded-0 img-fluid" style="width: 400px; height: 200px" src="{{ related.cover_image.url }}">
                                 <div class="card-img-overlay rounded-0 product-overlay d-flex align-items-center justify-content-center">
                                     <ul class="list-unstyled">
                                         <li><a class="btn btn-success text-white" href="shop-single.html"><i
                                                 class="far fa-heart"></i></a></li>
-                                        <li><a class="btn btn-success text-white mt-2" href="{% url 'shop_details' related.slug %}"><i
+                                        <li><a class="btn btn-success text-white mt-2"
+                                               href="{% url 'shop_details' related.slug %}"><i
                                                 class="far fa-eye"></i></a></li>
-                                        <li><a id="cart" data-product-slug="{{ related.slug }}" class="btn btn-success text-white mt-2" href="#"><i
+                                        <li><a id="cart" data-product-slug="{{ related.slug }}"
+                                               class="btn btn-success text-white mt-2" href="#"><i
                                                 class="fas fa-cart-plus"></i></a></li>
                                     </ul>
                                 </div>
@@ -284,7 +258,7 @@
                 {% endfor %}
             {% endif %}
             </div>
-        <script src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
+            <script src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
     </section>
     <!-- End Article -->
 
