Added Favourites Functionality, Fixed Cart Bugs

--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -97,5 +97,5 @@
     </div>
 </nav>
 <script src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
-<script src="{% get_static_prefix %}js/favourites_count.js"></script>
+<script src="{% get_static_prefix %}js/favourites/favourites_count.js"></script>
 <script src="{% get_static_prefix %}js/cart/load_cart_session.js"></script>
