--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -47,11 +47,13 @@
                         {% elif btn.title == 'Login' and request.user.is_authenticated %}
                         {% elif btn.title == 'Logout' and request.user.is_authenticated %}
                             <li class="nav-item">
-                                <a id="{{ btn.title }}" class="nav-link" href="{{ btn.get_absolute_url }}">{{ btn.title }}</a>
+                                <a id="{{ btn.title }}" class="nav-link"
+                                   href="{{ btn.get_absolute_url }}">{{ btn.title }}</a>
                             </li>
                         {% elif btn.title != 'Logout' %}
                             <li class="nav-item">
-                                <a id="{{ btn.title }}" class="nav-link" href="{{ btn.get_absolute_url }}">{{ btn.title }}</a>
+                                <a id="{{ btn.title }}" class="nav-link"
+                                   href="{{ btn.get_absolute_url }}">{{ btn.title }}</a>
                             </li>
                         {% endif %}
 
@@ -71,10 +73,14 @@
             <div class="navbar align-self-center d-flex">
                 <div class="d-lg-none flex-sm-fill mt-3 mb-4 col-7 col-sm-auto pr-3">
                     <div class="input-group">
-                        <input type="text" class="form-control" value="" id="inputMobileSearch" placeholder="Search ...">
+
+                        <input type="text" class="form-control"
+                               id="inputMobileSearch" placeholder="Search ...">
                         <div class="input-group-text">
-                            <i class="fa fa-fw fa-search"></i>
+                            <button type="submit" class="fa fa-fw fa-search"></button>
                         </div>
+
+
                     </div>
                 </div>
                 <a class="nav-icon d-none d-lg-inline" href="#" data-bs-toggle="modal"
@@ -83,12 +89,14 @@
                 </a>
                 <a class="nav-icon position-relative text-decoration-none" href="{% url 'cart' %}">
                     <i class="fa fa-fw fa-cart-arrow-down text-dark mr-1"></i>
-                    <span id="cart_number" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">{{ cart_products.count }}</span>
+                    <span id="cart_number"
+                          class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">{{ cart_products.count }}</span>
                 </a>
                 {% if request.user.is_authenticated %}
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'favourites' %}">
                         <i class="fa fa-fw fa-heart text-dark mr-3"></i>
-                        <span id="favourites-count" class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                        <span id="favourites-count"
+                              class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
                     </a>
                 {% endif %}
             </div>
@@ -96,6 +104,26 @@
 
     </div>
 </nav>
+
+<!-- Modal -->
+<div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="w-100 pt-1 mb-5 text-right">
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <form action="{% url 'search_view' %}" method="get" class="modal-content modal-body border-0 p-0">
+            <div class="input-group mb-2">
+                <input type="text" class="form-control" id="inputModalSearch" name="search" placeholder="Search ...">
+                <button type="submit" class="input-group-text bg-success text-light">
+                    <i class="fa fa-fw fa-search text-white"></i>
+                </button>
+            </div>
+        </form>
+    </div>
+</div>
+<!-- End Modal -->
+
 <script src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
 <script src="{% get_static_prefix %}js/favourites/favourites_count.js"></script>
 <script src="{% get_static_prefix %}js/cart/load_cart_session.js"></script>
