--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -98,7 +98,7 @@
                     <a class="nav-icon position-relative text-decoration-none" href="{% url 'favourites' %}">
                         <i class="fa fa-fw fa-heart text-dark mr-3"></i>
                         <span id="favourites-count"
-                              class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark">+99</span>
+                              class="position-absolute top-0 left-100 translate-middle badge rounded-pill bg-light text-dark"></span>
                     </a>
                 {% endif %}
             </div>
