--- a/webshop_01/templates/pages/index.html
+++ b/webshop_01/templates/pages/index.html
@@ -1,8 +1,9 @@
-{% extends 'base/base.html'%}
+{% extends 'base/base.html' %}
 {% load static %}
 {% block body_content %}
-     <!-- Modal -->
-    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <!-- Modal -->
+    <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog"
+         aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-lg" role="document">
             <div class="w-100 pt-1 mb-5 text-right">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -39,11 +40,18 @@
                                 <h1 class="h1 text-success"><b>Zay</b> eCommerce</h1>
                                 <h3 class="h2">Tiny and Perfect eCommerce Template</h3>
                                 <p>
-                                    Zay Shop is an eCommerce HTML5 CSS template with latest version of Bootstrap 5 (beta 1).
-                                    This template is 100% free provided by <a rel="sponsored" class="text-success" href="https://templatemo.com" target="_blank">TemplateMo</a> website.
-                                    Image credits go to <a rel="sponsored" class="text-success" href="https://stories.freepik.com/" target="_blank">Freepik Stories</a>,
-                                    <a rel="sponsored" class="text-success" href="https://unsplash.com/" target="_blank">Unsplash</a> and
-                                    <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank">Icons 8</a>.
+                                    Zay Shop is an eCommerce HTML5 CSS template with latest version of Bootstrap 5 (beta
+                                    1).
+                                    This template is 100% free provided by <a rel="sponsored" class="text-success"
+                                                                              href="https://templatemo.com"
+                                                                              target="_blank">TemplateMo</a> website.
+                                    Image credits go to <a rel="sponsored" class="text-success"
+                                                           href="https://stories.freepik.com/" target="_blank">Freepik
+                                    Stories</a>,
+                                    <a rel="sponsored" class="text-success" href="https://unsplash.com/"
+                                       target="_blank">Unsplash</a> and
+                                    <a rel="sponsored" class="text-success" href="https://icons8.com/" target="_blank">Icons
+                                        8</a>.
                                 </p>
                             </div>
                         </div>
@@ -62,37 +70,71 @@
                                 <h3 class="h2">Aliquip ex ea commodo consequat</h3>
                                 <p>
                                     You are permitted to use this Zay CSS template for your commercial websites.
-                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any kind of template collection websites.
+                                    You are <strong>not permitted</strong> to re-distribute the template ZIP file in any
+                                    kind of template collection websites.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+
+            {# Home Banner #}
             <div class="carousel-item">
                 <div class="container">
                     <div class="row p-5">
+                        {#  Cover Image #}
                         <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
                             <img class="img-fluid" src="{% get_static_prefix %}img/banner_img_03.jpg" alt="">
                         </div>
+                        {# Content #}
                         <div class="col-lg-6 mb-0 d-flex align-items-center">
                             <div class="text-align-left">
                                 <h1 class="h1">Repr in voluptate</h1>
                                 <h3 class="h2">Ullamco laboris nisi ut </h3>
                                 <p>
                                     We bring you 100% free CSS templates for your websites.
-                                    If you wish to support TemplateMo, please make a small contribution via PayPal or tell your friends about our website. Thank you.
+                                    If you wish to support TemplateMo, please make a small contribution via PayPal or
+                                    tell your friends about our website. Thank you.
                                 </p>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+            {# End Banner #}
+            {% for banner in banners %}
+                <div class="carousel-item">
+                    <div class="container">
+                        <div class="row p-5">
+                            {#  Cover Image #}
+                            <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
+                                <img class="img-fluid" src="{{ banner.cover_image.url }}" alt="image">
+                            </div>
+                            {# Content #}
+                            <div class="col-lg-6 mb-0 d-flex align-items-center">
+                                <div class="text-align-left">
+                                    <h1 class="h1">{{ banner.title}}</h1>
+                                    {% if banner.second_title %}
+                                        <h3 class="h2">{{ banner.second_title }}</h3>
+                                    {% endif %}
+                                    <p>
+                                        {{ banner.description }}
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endfor %}
+
         </div>
-        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="prev">
+        <a class="carousel-control-prev text-decoration-none w-auto ps-3" href="#template-mo-zay-hero-carousel"
+           role="button" data-bs-slide="prev">
             <i class="fas fa-chevron-left"></i>
         </a>
-        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel" role="button" data-bs-slide="next">
+        <a class="carousel-control-next text-decoration-none w-auto pe-3" href="#template-mo-zay-hero-carousel"
+           role="button" data-bs-slide="next">
             <i class="fas fa-chevron-right"></i>
         </a>
     </div>
@@ -112,17 +154,20 @@
         </div>
         <div class="row">
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% get_static_prefix %}img/category_img_01.jpg" class="rounded-circle img-fluid border"></a>
+                <a href="#"><img src="{% get_static_prefix %}img/category_img_01.jpg"
+                                 class="rounded-circle img-fluid border"></a>
                 <h5 class="text-center mt-3 mb-3">Watches</h5>
                 <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% get_static_prefix %}img/category_img_02.jpg" class="rounded-circle img-fluid border"></a>
+                <a href="#"><img src="{% get_static_prefix %}img/category_img_02.jpg"
+                                 class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3">Shoes</h2>
                 <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
             </div>
             <div class="col-12 col-md-4 p-5 mt-3">
-                <a href="#"><img src="{% get_static_prefix %}img/category_img_03.jpg" class="rounded-circle img-fluid border"></a>
+                <a href="#"><img src="{% get_static_prefix %}img/category_img_03.jpg"
+                                 class="rounded-circle img-fluid border"></a>
                 <h2 class="h5 text-center mt-3 mb-3">Accessories</h2>
                 <p class="text-center"><a class="btn btn-success">Go Shop</a></p>
             </div>
@@ -162,7 +207,8 @@
                             </ul>
                             <a href="shop-single.html" class="h2 text-decoration-none text-dark">Gym Weight</a>
                             <p class="card-text">
-                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in culpa qui officia deserunt.
+                                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt in culpa qui officia
+                                deserunt.
                             </p>
                             <p class="text-muted">Reviews (24)</p>
                         </div>
@@ -186,7 +232,8 @@
                             </ul>
                             <a href="shop-single.html" class="h2 text-decoration-none text-dark">Cloud Nike Shoes</a>
                             <p class="card-text">
-                                Aenean gravida dignissim finibus. Nullam ipsum diam, posuere vitae pharetra sed, commodo ullamcorper.
+                                Aenean gravida dignissim finibus. Nullam ipsum diam, posuere vitae pharetra sed, commodo
+                                ullamcorper.
                             </p>
                             <p class="text-muted">Reviews (48)</p>
                         </div>
@@ -208,9 +255,11 @@
                                 </li>
                                 <li class="text-muted text-right">$360.00</li>
                             </ul>
-                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Summer Addides Shoes</a>
+                            <a href="shop-single.html" class="h2 text-decoration-none text-dark">Summer Addides
+                                Shoes</a>
                             <p class="card-text">
-                                Curabitur ac mi sit amet diam luctus porta. Phasellus pulvinar sagittis diam, et scelerisque ipsum lobortis nec.
+                                Curabitur ac mi sit amet diam luctus porta. Phasellus pulvinar sagittis diam, et
+                                scelerisque ipsum lobortis nec.
                             </p>
                             <p class="text-muted">Reviews (74)</p>
                         </div>
