Added Text Pages and Site Map

--- a/webshop_01/templates/pages/index.html
+++ b/webshop_01/templates/pages/index.html
@@ -108,8 +108,8 @@
                     <div class="container">
                         <div class="row p-5">
                             {#  Cover Image #}
-                            <div class="mx-auto col-md-8 col-lg-6 order-lg-last">
-                                <img class="img-fluid" src="{{ banner.cover_image.url }}" alt="image">
+                            <div class="mx-auto col-md-8 col-lg-6 mb-4 order-lg-last">
+                                <img class="img-fluid" src="{{ banner.cover_image.url }}" style="height: 588px; width: 588px" alt="">
                             </div>
                             {# Content #}
                             <div class="col-lg-6 mb-0 d-flex align-items-center">
