--- a/webshop_01/templates/base/footer.html
+++ b/webshop_01/templates/base/footer.html
@@ -22,24 +22,27 @@
         <div class="col-md-4 pt-5">
             <h2 class="h2 text-light border-bottom pb-3 border-light">Products</h2>
             <ul class="list-unstyled text-light footer-link-list">
-                <li><a class="text-decoration-none" href="#">Luxury</a></li>
-                <li><a class="text-decoration-none" href="#">Sport Wear</a></li>
-                <li><a class="text-decoration-none" href="#">Men's Shoes</a></li>
-                <li><a class="text-decoration-none" href="#">Women's Shoes</a></li>
-                <li><a class="text-decoration-none" href="#">Popular Dress</a></li>
-                <li><a class="text-decoration-none" href="#">Gym Accessories</a></li>
-                <li><a class="text-decoration-none" href="#">Sport Shoes</a></li>
+                {% for category in categories %}
+                    <li><a class="text-decoration-none" href="#">{{ category.title }}</a></li>
+                {% endfor %}
+{#                <li><a class="text-decoration-none" href="#">Luxury</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Sport Wear</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Men's Shoes</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Women's Shoes</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Popular Dress</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Gym Accessories</a></li>#}
+{#                <li><a class="text-decoration-none" href="#">Sport Shoes</a></li>#}
             </ul>
         </div>
 
         <div class="col-md-4 pt-5">
             <h2 class="h2 text-light border-bottom pb-3 border-light">Further Info</h2>
             <ul class="list-unstyled text-light footer-link-list">
-                <li><a class="text-decoration-none" href="#">Home</a></li>
-                <li><a class="text-decoration-none" href="#">About Us</a></li>
-                <li><a class="text-decoration-none" href="#">Shop Locations</a></li>
-                <li><a class="text-decoration-none" href="#">FAQs</a></li>
-                <li><a class="text-decoration-none" href="#">Contact</a></li>
+                {% for nav in base_navigation %}
+                    {% if nav.title != 'Register' and nav.title != 'Login' and nav.title != 'Logout' %}
+                    <li><a class="text-decoration-none" href="{{ nav.get_absolute_url }}">{{ nav.title }}</a></li>
+                    {% endif %}
+                {% endfor %}
             </ul>
         </div>
 
