--- a/webshop_01/templates/pages/cart.html
+++ b/webshop_01/templates/pages/cart.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block style_css %}
         <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}css/cart.css">
-
 {% endblock %}
 {% block body_content %}
     <div class="card_cart mt-5 mb-5">
@@ -51,7 +50,7 @@
                     <div class="col">TOTAL PRICE</div>
                     <div class="col text-right" data-total-price="{{ request.cart_price }}" id="total_price">BGN {{ request.cart_price|floatformat:2 }}</div>
                 </div>
-                <button class="btn_cart">CHECKOUT</button>
+                <a  href="{% url 'payment' %}" class="btn_cart btn btn-primary">CHECKOUT</a>
             </div>
         </div>
 
