--- a/webshop_01/templates/pages/payment.html
+++ b/webshop_01/templates/pages/payment.html
@@ -9,7 +9,7 @@
         <section class="payment-form dark">
             <div class="container">
                 <div class="block-heading">
-                    <h2>Payment</h2>
+                    <h2>Finish Order</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam urna, dignissim nec auctor in,
                         mattis vitae leo.</p>
                 </div>
