--- a/webshop_01/templates/base/base.html
+++ b/webshop_01/templates/base/base.html
@@ -44,12 +44,18 @@
 
     -->
 </head>
-<body>
-
 {% include 'base/navigation.html' %}
+
+
+<div id="message" class="alert alert-success m-5" style="display: none; position: absolute; width: 1593px;
+    text-align: center;">
+
+</div>
+
+<script src="{% get_static_prefix %}js/alerts.js"></script>
 <!-- Modal -->
 <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-     >
+>
     <div class="modal-dialog modal-lg" role="document">
         <div class="w-100 pt-1 mb-5 text-right">
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
