--- a/webshop_01/templates/pages/index.html
+++ b/webshop_01/templates/pages/index.html
@@ -22,6 +22,7 @@
 
 
     <!-- Start Banner Hero -->
+
     <div id="template-mo-zay-hero-carousel" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
             <li data-bs-target="#template-mo-zay-hero-carousel" data-bs-slide-to="0" class="active"></li>
@@ -109,12 +110,13 @@
                         <div class="row p-5">
                             {#  Cover Image #}
                             <div class="mx-auto col-md-8 col-lg-6 mb-4 order-lg-last">
-                                <img class="img-fluid" src="{{ banner.cover_image.url }}" style="height: 588px; width: 588px" alt="">
+                                <img class="img-fluid" src="{{ banner.cover_image.url }}"
+                                     style="height: 588px; width: 588px" alt="">
                             </div>
                             {# Content #}
                             <div class="col-lg-6 mb-0 d-flex align-items-center">
                                 <div class="text-align-left">
-                                    <h1 class="h1">{{ banner.title}}</h1>
+                                    <h1 class="h1">{{ banner.title }}</h1>
                                     {% if banner.second_title %}
                                         <h3 class="h2">{{ banner.second_title }}</h3>
                                     {% endif %}
