Added Alerts In View

--- a/webshop_01/templates/pages/index.html
+++ b/webshop_01/templates/pages/index.html
@@ -270,5 +270,9 @@
             </div>
         </div>
     </section>
+
+
+    <script>accessMessage('asd')</script>
+    <script src="{% get_static_prefix %}js/alerts.js"></script>
     <!-- End Featured Product -->
 {% endblock %}
