Js Module; Finish Success Message

--- a/webshop_01/templates/base/base.html
+++ b/webshop_01/templates/base/base.html
@@ -52,7 +52,7 @@
 
 </div>
 
-<script src="{% get_static_prefix %}js/alerts.js"></script>
+<script type="module" src="{% get_static_prefix %}js/alerts.js"></script>
 <!-- Modal -->
 <div class="modal fade bg-white" id="templatemo_search" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
 >
