--- a/webshop_01/templates/base/navigation.html
+++ b/webshop_01/templates/base/navigation.html
@@ -108,6 +108,6 @@
 </nav>
 
 
-<script src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
-<script src="{% get_static_prefix %}js/favourites/favourites_count.js"></script>
-<script src="{% get_static_prefix %}js/cart/load_cart_session.js"></script>
+<script type="module" src="{% get_static_prefix %}js/cart/clear_cart.js"></script>
+<script type="module" src="{% get_static_prefix %}js/favourites/favourites_count.js"></script>
+<script type="module" src="{% get_static_prefix %}js/cart/load_cart_session.js"></script>
