--- a/webshop_01/templates/pages/cart.html
+++ b/webshop_01/templates/pages/cart.html
@@ -55,5 +55,5 @@
         </div>
 
     </div>
-    <script src="{% get_static_prefix %}js/cart/del_cart_product.js"></script>
+    <script type="module" src="{% get_static_prefix %}js/cart/del_cart_product.js"></script>
 {% endblock %}
