--- a/webshop_01/templates/pages/favourites.html
+++ b/webshop_01/templates/pages/favourites.html
@@ -100,5 +100,5 @@
     </div>
     </div>
     <!-- End Content -->
-    <script src="{% get_static_prefix %}js/favourites/remove_from_favourites.js"></script>
+    <script type="module" src="{% get_static_prefix %}js/favourites/remove_from_favourites.js"></script>
 {% endblock %}
