--- a/webshop_01/templates/pages/search_results.html
+++ b/webshop_01/templates/pages/search_results.html
@@ -98,7 +98,7 @@
     </div>
     <!-- End Content -->
     <script src="{% get_static_prefix %}js/shop_rate.js"></script>
-    <script src="{% get_static_prefix %}js/favourites/add_to_favourites.js"></script>
-    <script src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
+    <script type="module" src="{% get_static_prefix %}js/favourites/add_to_favourites.js"></script>
+    <script type="module" src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
     <!--End Brands-->
 {% endblock %}>
