--- a/webshop_01/templates/pages/shop-single.html
+++ b/webshop_01/templates/pages/shop-single.html
@@ -268,7 +268,7 @@
                 {% endfor %}
             {% endif %}
             </div>
-            <script src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
+            <script type="module" src="{% get_static_prefix %}js/cart/add_to_cart.js"></script>
     </section>
     <!-- End Article -->
 
